[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/sprites/static/background.png" type="Texture" id=1]
[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/sprites/static/ui/duck_dash_logo.png" type="Texture" id=3]
[ext_resource path="res://scenes/screens/main_menu.gd" type="Script" id=4]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )

[node name="DuckDashLogo" type="Sprite" parent="."]
position = Vector2( 480, 270 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="GreetingRichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1255.0
margin_top = 90.0
margin_right = -365.0
margin_bottom = -940.0
bbcode_enabled = true
bbcode_text = "[center]Hello, sircle[/center]"
text = "Hello, sircle"
fit_content_height = true

[node name="OptionButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1555.0
margin_top = 60.0
margin_right = -120.0
margin_bottom = -910.0
text = "Option"

[node name="PlayButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 740.0
margin_right = -1140.0
margin_bottom = -120.0
text = "Play"

[node name="InventoryButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1250.0
margin_top = 355.0
margin_right = -120.0
margin_bottom = -615.0
text = "Inventory"

[node name="MarketplaceButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1250.0
margin_top = 575.0
margin_right = -120.0
margin_bottom = -395.0
text = "Marketplace"

[node name="QuitButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1250.0
margin_top = 795.0
margin_right = -120.0
margin_bottom = -175.0
text = "Quit"

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="InventoryButton" to="." method="_on_InventoryButton_pressed"]
[connection signal="pressed" from="MarketplaceButton" to="." method="_on_MarketplaceButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
